Added Packet.json saving, and moved the autosave to Saved/RomanceMinigames/Test/

--- a/Plugins/VE_Area/VE_Area.uplugin
+++ b/Plugins/VE_Area/VE_Area.uplugin
@@ -13,5 +13,11 @@
 	"CanContainContent": true,
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
-	"Installed": false
+	"Installed": false,
+	"Plugins": [
+		{
+			"Name": "JsonBlueprintUtilities",
+			"Enabled": true
+		}
+	]
 }
